| Summary: | ASTERISK-28553: stasis.c: Crash during unload | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | patch |
| Date Opened: | 2019-09-23 15:17:44 | Date Closed: | 2019-10-03 14:55:14 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | GIT | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ASTERISK-28553.patch ( 1) backtrace_3054.txt | |
| Description: | Looks like it's possible for the stasis "topic_all" container to be NULL, and cause a crash during shutdown (DO_CRASH enabled).
Note, caught by jenkins during a test run of /channels/channels/SIP/invite_no_totag See [^backtrace_3054.txt] | ||
| Comments: | By: Corey Farrell (coreyfarrell) 2019-09-23 15:36:21.229-0500 Potential fix to this issue. Simple fix but I don't have time to test it right now. By: Joshua C. Colp (jcolp) 2019-10-01 08:52:05.398-0500 I've confirmed your patch fixes the problem. Did you want to put it up on Gerrit or shall I? By: Friendly Automation (friendly-automation) 2019-10-03 14:55:14.884-0500 Change 12994 merged by Friendly Automation: stasis: Pass bumped topic_all reference to proxy_dtor. [https://gerrit.asterisk.org/c/asterisk/+/12994|https://gerrit.asterisk.org/c/asterisk/+/12994] By: Friendly Automation (friendly-automation) 2019-10-04 05:25:46.447-0500 Change 12993 merged by Joshua Colp: stasis: Pass bumped topic_all reference to proxy_dtor. [https://gerrit.asterisk.org/c/asterisk/+/12993|https://gerrit.asterisk.org/c/asterisk/+/12993] By: Friendly Automation (friendly-automation) 2019-10-04 05:26:08.990-0500 Change 12995 merged by Joshua Colp: stasis: Pass bumped topic_all reference to proxy_dtor. [https://gerrit.asterisk.org/c/asterisk/+/12995|https://gerrit.asterisk.org/c/asterisk/+/12995] | ||